# feishu_code

./: .env.example  .gitignore  README.md
.github/workflows/: deploy.yml
BackEnd/: pyproject.toml
BackEnd/examples/: demo.py
BackEnd/src/devflow/agents/: __init__.py  base.py  code_agent.py  delivery_agent.py  demand_agent.py  review_agent.py  scheme_agent.py  simple_agent.py
BackEnd/src/devflow/api/: main.py  schemas.py  service.py
BackEnd/src/devflow/api/routes/: checkpoint.py  execution.py
BackEnd/src/devflow/core/: __init__.py  checkpoint.py  context.py  engine.py  state.py
BackEnd/src/devflow/llm/: factory.py  langchain_llm.py
BackEnd/src/devflow/models/: agent.py  execution.py  pipeline.py
BackEnd/src/devflow/schemas/: __init__.py  structured_outputs.py
BackEnd/src/devflow/utils/: config.py  exceptions.py  logging.py
BackEnd/tests/: test_llm.py  test_models.py  test_structured_output.py
FrontEnd/Extension/pipeline-extension/: README.md  manifest.config.ts  package-lock.json  package.json  vite.config.ts
FrontEnd/SPA/: README.md  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.js
FrontEnd/SPA/src/: App.vue  main.ts  router.ts  style.css
backend/: .gitignore
docs/: API.md
frontend/: Pipeline 模块.md  index.html  package.json  tsconfig.json
frontend/src/pages/: WorkflowPage.vue
src/devflow/: __init__.py
src/devflow/agents/: code_agent.py  demand_agent.py  factory.py  review_agent.py  scheme_agent.py  simple_agent.py
src/devflow/api/: main.py  schemas.py  (+1 more)
src/pages/: HomePage.vue
tests/: test_models.py
(+39 files in other folders)
