[tool.poetry]
name = "devflow-engine"
version = "0.1.0"
description = "AI-Driven Development Pipeline Engine"
readme = "README.md"
license = "MIT"
authors = ["DevFlow Team"]
keywords = ["ai", "pipeline", "agent", "llm", "devops", "automation"]
packages = [{ include = "devflow", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.110.0"
uvicorn = { extras = ["standard"], version = ">=0.27.0" }
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.0"
python-multipart = ">=0.0.9"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.25" }
aiosqlite = ">=0.19.0"
alembic = ">=1.13.0"
langchain = ">=0.1.0"
langgraph = ">=0.0.35"
langchain-core = ">=0.1.50"
langchain-openai = ">=0.1.0"
langchain-anthropic = ">=0.1.0"
langchain-google-genai = ">=0.0.5"
langchain-deepseek = ">=0.1.0"
gitpython = ">=3.1.42"
python-dotenv = ">=1.0.0"
structlog = ">=24.1.0"
tenacity = ">=8.2.0"
httpx = ">=0.27.0"
tiktoken = ">=0.5.0"
redis = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.3.0"
mypy = ">=1.9.0"
pre-commit = ">=3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
